# CopyConstantPropagation

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: CopyConstant.h  DataFlowValue.h
lib/: CMakeLists.txt  CopyConstant.cpp  DataFlowValue.cpp
src/: CMakeLists.txt  Driver.cpp
testcases/: SPEC_RUN.sh  data.txt  gmon.out  run.sh
testcases/inputs/: test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
testcases/outputs/: test1.ll  test1.ll.txt  test10.ll.txt  test11.ll.txt  test12.ll.txt  test13.ll.txt  test14.ll.txt  test15.ll.txt  test2.ll  test2.ll.txt  test3.ll  test3.ll.txt  test4.ll  test4.ll.txt  test5.ll  test5.ll.txt  test6.ll.txt  test7.ll.txt  test8.ll.txt  test9.ll.txt
testcases/outputs/SPEC/: bzip2.0.4.opt.ll.txt  h264ref.0.4.opt.ll.txt  lbm.0.4.opt.ll.txt  libquantum.0.4.opt.ll.txt  mcf.0.4.opt.ll.txt
vasco/: Analysis.h  Worklist.h
